--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@types/geojson": "^7946.0.14",
+    "@types/navermaps": "^3.7.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
