--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/material": "^6.1.9",
+    "@mui/x-date-pickers": "^7.23.0",
+    "dayjs": "^1.11.13",
     "next": "15.0.3",
     "react": "18.2.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "18.2.0",
+    "react-time-picker": "^7.0.0",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
@@ -25,6 +32,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
-    "typescript": "^5"
+    "simple-zustand-devtools": "^1.1.0",
+    "typescript": "^5",
+    "zukeeper": "^1.0.2"
   }
 }
