--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@emotion/styled": "^11.13.5",
     "@mui/material": "^6.1.9",
     "@mui/x-date-pickers": "^7.23.0",
+    "axios": "^1.7.9",
     "dayjs": "^1.11.13",
-    "next": "15.0.3",
+    "next": "^15.1.3",
     "react": "18.2.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "18.2.0",
