--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-daum-postcode": "^3.1.3",
     "react-dom": "18.2.0",
     "react-time-picker": "^7.0.0",
+    "swiper": "^11.2.1",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
