--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/x-date-pickers": "^7.23.0",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "js-cookie": "^3.0.5",
     "next": "^15.1.3",
     "react": "18.2.0",
     "react-daum-postcode": "^3.1.3",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/geojson": "^7946.0.14",
+    "@types/js-cookie": "^3.0.6",
     "@types/navermaps": "^3.7.8",
     "@types/node": "^20",
     "@types/react": "^18",
